# rs_chat

./: Cargo.toml  protokoll.txt
ClientSrc/: ChatroomClient.cpp
SysProg/h2/: ChatroomClient.c
src/: client.rs  connect.rs  connection.rs  lib.rs  main.rs  package.rs  requests.rs  response.rs  server.rs
src/client/: listen.rs  primary.rs  secondary.rs  trivial.rs
src/server/: bot.rs  default_bot.json  login.rs
