[package]
name = "rs_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
clap = { version = "4.5.20", features = ["derive"] }
strsim = "0.11.1"
paste = "1.0.15"